--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
+    "p-retry": "^6.2.1",
     "razorpay": "^2.9.6",
     "stripe": "^18.2.1",
     "validator": "^13.15.0"
